feat: add banner to page config

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "export": "next export",
     "build-prod": "run-s clean build export",
     "clean": "rimraf .next out",
-    "lint": "next lint --fix",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "check-types": "tsc --noEmit --pretty",
     "test": "jest",
     "cypress": "cypress open",
