--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-oidc-context": "^2.2.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
