--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-oidc-context": "^2.2.0",
+    "react-toastify": "^9.1.1",
     "yup": "^0.32.11",
     "zustand": "^4.1.4"
   },
