--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "svgr": "rm -rf src/components/icons && npx @svgr/cli --typescript --no-svgo -d src/components/icons src/assets/svg"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.2",
+    "@mui/material": "^5.11.13",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
