--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@headlessui/react": "^1.7.2",
     "@mui/material": "^5.11.13",
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/match-sorter-utils": "^8.8.4",
+    "@tanstack/react-table": "^8.8.5",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
@@ -35,6 +37,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-oidc-context": "^2.2.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
     "yup": "^0.32.11",
     "zustand": "^4.1.4"
