--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.16",
     "@types/react": "^18.0.18",
@@ -78,6 +79,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.1",
     "jest": "^29.0.2",
+    "jest-axe": "^7.0.1",
     "jest-environment-jsdom": "^29.0.2",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
